# MedSync

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
docs/: conversas.md
infra/nginx/: default.conf
infra/scripts/: backup-db.sh  run-backend.sh
src/_seed/models/: __init__.py  base.py  soft_delete.py  soft_delete_manager.py
src/authentication/: apps.py  tests.py
src/authentication/admin/: __init__.py  group.py  user.py
src/authentication/migrations/: 0001_initial.py  0002_authenticationgroup_alter_user_options.py
src/authentication/models/: __init__.py  group.py  user.py
src/clinic/: apps.py  report_forms.py  tests.py  urls.py
src/clinic/admin/: __init__.py  appointment.py  client.py  doctor.py  doctor_payment_split_rule.py  email.py  payment_method.py  phone.py  specialty.py
src/clinic/controllers/: __init__.py  appointment_report_data.py  appointment_report_pdf.py
src/clinic/forms/: __init__.py  appointment_admin_form.py  appointment_payment_inline_form.py  appointment_payment_inline_formset.py  client_admin_form.py  doctor_admin_form.py  doctor_payment_split_rule_admin_form.py  specialty_admin_form.py
src/clinic/management/: __init__.py
src/clinic/migrations/: 0001_initial.py  0002_alter_appointment_options_alter_client_options_and_more.py  0002_alter_appointment_payment_method.py  0002_remove_doctorpaymentsplitrule_soft_delete.py  (+1 more)
src/clinic/models/: __init__.py  appointment.py  (+8 more)
src/clinic_assets/: README.md
src/config/: settings.py  urls.py
src/payments/: __init__.py  apps.py  tests.py
(+31 files in other folders)
